--- a/themes/book/layouts/home.html
+++ b/themes/book/layouts/home.html
@@ -2,27 +2,18 @@
 <html lang="{{ .Site.Language.Lang }}">
 
 <head>
-  {{ partial "docs/html-head" . }}
-  {{ partial "docs/inject/head" . }}
+    {{ partial "docs/html-head" . }} {{ partial "docs/inject/head" . }}
 </head>
-{{ $content := `
-# Hugo Book Theme
+{{ $content := ` # Hugo Book Theme This is a placeholder for home page. You can override this page in: - &#96;/content/_index.md&#96; - &#96;/layouts/home.html&#96; ` }}
 
-This is a placeholder for home page.  
-You can override this page in:
-
- - &#96;/content/_index.md&#96;
- - &#96;/layouts/home.html&#96;
-` }}
 <body>
-  <main class="flex justify-center">
-    <div class="book-home markdown">
-      {{ replace $content "&#96;" "`" | markdownify }}
-    </div>
-  </main>
+    <main class="flex justify-center">
+        <div class="book-home markdown">
+            {{ replace $content "&#96;" "`" | markdownify }}
+        </div>
+    </main>
 
-  {{ partial "docs/inject/body" . }}
-  {{ template "_internal/google_analytics_async.html" . }}
+    {{ partial "docs/inject/body" . }} {{ template "_internal/google_analytics_async.html" . }}
 </body>
 
 </html>
