--- a/themes/book/layouts/shortcodes/button.html
+++ b/themes/book/layouts/shortcodes/button.html
@@ -1,12 +1,4 @@
-{{ $ref := "" }}
-{{ $target := "" }}
-{{ with .Get "href" }}
-  {{ $ref = . }}
-  {{ $target = "_blank" }}
-{{ end }}
-{{ with .Get "relref" }}
-  {{ $ref = relref $ . }}
-{{ end }}
-<a {{ with $ref }} href="{{.}}" {{ end }} {{ with $target }} target="{{.}}" {{ end }} class="book-btn{{ with .Get "class" }} {{ . }}{{ end }}">
+{{ $ref := "" }} {{ $target := "" }} {{ with .Get "href" }} {{ $ref = . }} {{ $target = "_blank" }} {{ end }} {{ with .Get "relref" }} {{ $ref = relref $ . }} {{ end }}
+<a {{ with $ref }} href="{{.}}" {{ end }} {{ with $target }} target="{{.}}" {{ end }} class="book-btn{{ with .Get " class " }} {{ . }}{{ end }}">
   {{ $.Inner }}
 </a>
