--- a/themes/book/layouts/partials/docs/menu-bundle.html
+++ b/themes/book/layouts/partials/docs/menu-bundle.html
@@ -1,19 +1,20 @@
-{{ template "hrefhack" . }}
-{{ with .Site.GetPage .Site.Params.BookMenuBundle }}
-  {{- .Content -}}
-{{ end }}
+{{ template "hrefhack" . }} {{ with .Site.GetPage .Site.Params.BookMenuBundle }} {{- .Content -}} {{ end }} {{ define "hrefhack" }} {{ $attrEq := "$=" }} {{ $attrVal := .RelPermalink }} {{ if eq .RelPermalink "/" }} {{ $attrEq = "=" }} {{ $attrVal = .Permalink
+}} {{ end }}
 
-{{ define "hrefhack" }}
-  {{ $attrEq := "$=" }}
-  {{ $attrVal := .RelPermalink }}
-  {{ if eq .RelPermalink "/" }}
-    {{ $attrEq = "=" }}
-    {{ $attrVal = .Permalink }}
-  {{ end }}
-
-  <style>
-  nav ul a[href{{ $attrEq }}"{{ $attrVal }}"] {
-      color: {{ default "#004ed0" .Site.Params.BookMenuBundleActiveLinkColor }};
-  }
-  </style>
+<style>
+    nav ul a[href {
+        {
+            $attrEq
+        }
+    }
+    
+    "{{ $attrVal }}"] {
+        color: {
+            {
+                default "#004ed0".Site.Params.BookMenuBundleActiveLinkColor
+            }
+        }
+        ;
+    }
+</style>
 {{ end }}
