--- a/themes/book/layouts/partials/docs/toc.html
+++ b/themes/book/layouts/partials/docs/toc.html
@@ -1,6 +1,5 @@
-{{ $tocLevels := default (default 6 .Site.Params.BookToC) .Params.BookToC }}
-{{ if and $tocLevels .Page.TableOfContents }}
-  <aside class="book-toc level-{{$tocLevels}} fixed">
+{{ $tocLevels := default (default 6 .Site.Params.BookToC) .Params.BookToC }} {{ if and $tocLevels .Page.TableOfContents }}
+<aside class="book-toc level-{{$tocLevels}} fixed">
     {{ .Page.TableOfContents }}
-  </aside>
+</aside>
 {{ end }}
