--- a/themes/book/layouts/posts/single.html
+++ b/themes/book/layouts/posts/single.html
@@ -1,12 +1,11 @@
-{{ define "main" }}
-{{ $dateFormat := default "January 2, 2006" .Site.Params.BookDateFormat }}
+{{ define "main" }} {{ $dateFormat := default "January 2, 2006" .Site.Params.BookDateFormat }}
 <header class="markdown">
-  <h1>{{ .Title }}</h1>
-  <h5>
-    <strong>{{ .Date.Format $dateFormat }}</strong>
-  </h5>
+    <h1>{{ .Title }}</h1>
+    <h5>
+        <strong>{{ .Date.Format $dateFormat }}</strong>
+    </h5>
 </header>
 <article class="markdown">
-  {{- .Content -}}
+    {{- .Content -}}
 </article>
 {{ end }}
