--- a/themes/book/assets/_custom.scss
+++ b/themes/book/assets/_custom.scss
@@ -1,2 +1,18 @@
 /* To be overridden by theme user */
 // @import "variables";
+
+
+kbd {
+    /* drop shadow */
+    -moz-box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.2);
+    box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.2);
+
+    /* rounded corners */
+    -webkit-border-bottom-right-radius: 4px;
+    -webkit-border-bottom-left-radius: 4px;
+    -moz-border-radius-bottomright: 4px;
+    -moz-border-radius-bottomleft: 4px;
+    border-radius: 4px;
+
+}
