add padding to the kbd styling

--- a/themes/book/assets/_custom.scss
+++ b/themes/book/assets/_custom.scss
@@ -3,6 +3,8 @@
 
 
 kbd {
+    padding: 0px 3px;
+
     /* drop shadow */
     -moz-box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.2);
     -webkit-box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.2);
