tweak h2 color for dark mode

--- a/themes/hugo-book-9/assets/_defaults.scss
+++ b/themes/hugo-book-9/assets/_defaults.scss
@@ -80,7 +80,7 @@ $hint-colors: (
 
   // customizations
   --shadow: rgba(255, 255, 255, 0.2);
-  --h2-color: #c8009e;
+  --h2-color: #bb2266;
   --h3-color: #00C09e;
   --h4-color: #009ee8;
   --h5-color: initial;
